add flexbox to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,12 @@ header {
 
     background-color: #39a6b2;
 
+    display: flex;
+
+    justify-content: space-between;
+
+    flex-wrap: wrap
+
 }
 
 header a {
@@ -35,8 +41,6 @@ header a {
 }
 
 header nav {
-
-    float: right;
 
     margin: 7px 0;
 
@@ -66,8 +70,6 @@ header h1 {
     color: #fce138;
 
     margin: 0;
-
-    display: inline;
 
 }
 
