--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,18 @@ header nav {
 
 }
 
-header nav ul li {
+header nav ul {
 
-    display: inline;
+    display: flex;
+
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+
+    align-items: center;
+
+    list-style: none;
+
 }
 
 header nav ul li a {
@@ -57,7 +66,7 @@ header nav ul li a {
 
     font-weight: lighter;
 
-    font-size: 22px;
+    font-size: 1.55vw;
 
 }
 
