--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,17 +95,43 @@ section {
 
     background-image: url("../images/hero-bg.jpg");
 
-    height: 700px;
-
     background-size: cover;
 
     background-position: center;
 
-    position: relative;
+    display: flex;
+
+    justify-content: center;
+
+    flex-wrap: wrap;
 
 }
 
-/* Hero Style End */
+.hero-cta {
+
+    width: 35%;
+
+    text-align: right;
+
+    margin: 3.5%;
+
+    color: #fff;
+
+    font-size: 18px;
+
+    line-height: 1.3;
+
+}
+
+.hero-cta h2 {
+
+    font-style: italic;
+
+    font-size: 55px;
+
+    color: #fce138;
+
+}
 
 .hero-form {
 
@@ -115,15 +141,11 @@ section {
 
     padding: 20px;
 
-    width: 500px;
-
     color: #024076;
 
-    position: absolute;
+    width: 40%;
 
-    bottom: 120px;
-
-    right: 140px;
+    margin: 3.5%;
 
 }
 
@@ -424,11 +446,15 @@ footer {
 
     padding: 40px 35px;
 
+    display: flex;
+
+    justify-content: space-between;
+
+    flex-wrap: wrap;
+
 }
 
 footer h2 {
-
-    display: inline;
 
     color: #024e76;
 
@@ -439,8 +465,6 @@ footer h2 {
 }
 
 footer div {
-
-    float: right;
 
     line-height: 1.5;
 
