add flexbox to the hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,12 +202,6 @@ section {
 
 /* HERO STYLES END */
 
-.intro {
-
-    text-align: center;
-
-}
-
 
 .intro p {
 
@@ -221,11 +215,11 @@ section {
 
     margin: 0 auto;
 
+    text-align: center;
+
 }
 
 .steps {
-
-    text-align: center;
 
     background: #fce138;
 
@@ -276,13 +270,15 @@ section {
 
     color: #024e76;
 
-    margin-bottom: 35px;
-
-    padding: 0 100px 20px 100px;
-
-    display: inline-block;
-
     border-bottom: 3px solid;
+
+    padding-bottom: 20px;
+
+    text-align: center;
+
+    margin: 0 auto 35px auto;
+
+    width: 50%;
 
 }
 
@@ -295,12 +291,6 @@ section {
 .secondary-border {
 
     border-color: #39a6b2;
-
-}
-
-.trainers {
-
-    text-align: center;
 
 }
 
@@ -377,8 +367,6 @@ section {
 .contact {
 
     background: #024e76;
-
-    text-align: center;
 
 }
 
@@ -475,5 +463,11 @@ footer div {
 footer a {
 
     color: #024e76;
+
+}
+
+.flex-row {
+
+    display: flex;
 
 }
