--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,30 @@ section {
 
 }
 
+.section-title {
+
+    font-size: 55px;
+
+    color: #024e76;
+
+    border-bottom: 3px solid;
+
+    padding-bottom: 20px;
+
+    text-align: center;
+
+    margin: 0 auto 35px auto;
+
+    width: 50%;
+
+}
+
+.primary-border {
+
+    border-color: #fce138;
+
+}
+
 .steps {
 
     background: #fce138;
@@ -259,7 +283,7 @@ section {
 .step-img img {
 
     max-width: 100%;
-    
+
 }
 
 .step-text {
@@ -306,74 +330,55 @@ section {
 
 }
 
-
-.section-title {
-
-    font-size: 55px;
-
-    color: #024e76;
-
-    border-bottom: 3px solid;
-
-    padding-bottom: 20px;
-
-    text-align: center;
-
-    margin: 0 auto 35px auto;
-
-    width: 50%;
-
-}
-
-.primary-border {
-
-    border-color: #fce138;
-
-}
-
 .secondary-border {
 
     border-color: #39a6b2;
 
 }
 
+.trainers {
+
+    width: 100%;
+
+    margin: 0 auto;
+
+    display: flex;
+
+    flex-wrap: wrap;
+
+    justify-content: space-around;
+
+}
+
 .trainer {
 
-    width: 900px;
-
-    margin: 0 auto 30px auto;
+    margin: 20px;
 
     background: #024e76;
     
     color: #fce138;
 
-    overflow: auto;
+    flex: 1
 
 }
 
 .trainer img {
 
-    width: 35%;
-
-    float: left;
+    width: 100%;
 
 }
 
 .trainer-bio {
 
-    padding: 35px;
+    padding: 25px;
 
-    float: left;
-
-    width: 65%;
+    line-height: 1.3;
 
 }
 
 .trainer-bio h3 {
 
-    font-size: 32px;
-
-    margin-bottom: 8px;
+    font-size: 28px;
 
 }
 
@@ -381,17 +386,15 @@ section {
 
     font-weight: lighter;
 
-    font-size: 26px;
+    font-size: 22px;
 
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 
 }
 
 .trainer-bio p {
 
     font-size: 17px;
-
-    line-height: 1.3;
 
 }
 
@@ -469,6 +472,12 @@ section {
     
 }
 
+.flex-row {
+
+    display: flex;
+
+}
+
 footer {
 
     background: #fce138;
@@ -506,11 +515,5 @@ footer div {
 footer a {
 
     color: #024e76;
-
-}
-
-.flex-row {
-
-    display: flex;
 
 }
