--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,26 @@ section {
 
 }
 
+.step {
+
+    margin: 50px auto;
+
+    padding-bottom: 50px;
+
+    width: 80%;
+
+    border-bottom: 1px solid #39a6b2;
+
+    display: flex;
+
+    flex-wrap: wrap;
+
+    align-items: center;
+
+    justify-content: space-between;
+
+}
+
 
 .step h3 {
 
@@ -307,26 +327,6 @@ section {
     line-height: 1.5;
 
     color: #024e76;
-
-}
-
-.step {
-
-    margin: 50px auto;
-
-    padding-bottom: 50px;
-
-    width: 80%;
-
-    border-bottom: 1px solid #39a6b2;
-
-    display: flex;
-
-    flex-wrap: wrap;
-
-    align-items: center;
-
-    justify-content: space-between;
 
 }
 
@@ -416,6 +416,24 @@ section {
 
 }
 
+.contact-info {
+
+    display: flex;
+
+    justify-content: space-between;
+
+    flex-wrap: wrap;
+
+}
+
+.contact-info > * {
+
+    flex: 1;
+
+    margin: 15px;
+
+}
+
 .contact h2 {
 
     color: #fce138
@@ -424,23 +442,11 @@ section {
 
 .contact-info iframe {
 
-    width: 400px;
-
     height: 400px;
 
 }
 
 .contact-info div {
-
-    width: 410px;
-
-    display: inline-block;
-
-    vertical-align: top;
-
-    text-align: left;
-
-    margin: 30px 0 0 60px;
 
     color: white;
 
@@ -460,7 +466,7 @@ section {
 
     line-height: 1.5;
 
-    font-size: 20px;
+    font-size: 16px;
     
     font-style: normal;
 
@@ -470,6 +476,44 @@ section {
 
     color: #fce138
     
+}
+
+.contact-form input, .contact-form textarea {
+
+    border: 1px solid #024e76;
+
+    display: block;
+
+    padding: 7px 15px;
+
+    font-size: 16px;
+
+    color: #024e76;
+
+    width: 100%;
+
+    margin-bottom: 15px;
+
+    margin-top: 5px;
+
+}
+
+.contact-form button {
+
+    width: 100%;
+
+    border: none;
+
+    background: #fce138;
+
+    color: #024e76;
+
+    text-align: center;
+
+    padding: 15px 0;
+
+    font-size: 16px;
+
 }
 
 .flex-row {
