--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ header nav ul {
 
 header nav ul li a {
 
-    margin: 0 30px;
+    padding: 10px 15px;
 
     font-weight: lighter;
 
@@ -105,6 +105,8 @@ section {
 
     flex-wrap: wrap;
 
+    align-items: flex-start;
+
 }
 
 .hero-cta {
@@ -119,7 +121,7 @@ section {
 
     font-size: 18px;
 
-    line-height: 1.3;
+    line-height: 1.2;
 
 }
 
@@ -221,7 +223,7 @@ section {
 
 .section-title {
 
-    font-size: 55px;
+    font-size: 48px;
 
     color: #024e76;
 
@@ -559,5 +561,29 @@ footer div {
 footer a {
 
     color: #024e76;
+
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+
+@media screen and (max-width: 980px) {
+
+    }
+
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+
+@media screen and (max-width: 768px) {
+
+    }
+
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+
+@media screen and (max-width: 575px) {
+
+    }
 
 }
