final css touches

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+:root {
+
+    --primary-color: #fce138;
+
+    --secondary-color: #024e76;
+
+    --tertiary-color: #39a6b2;
+
+}
+
 * {
 
     margin: 0;
@@ -10,7 +20,7 @@
 
 body {
 
-    color: #39a6b2;
+    color: var(--tertiary-color);
     
     font-family: Helvetica, Arial, sans-serif;
 
@@ -22,7 +32,7 @@ header {
 
     padding: 20px 35px;
 
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 
     display: flex;
 
@@ -44,13 +54,15 @@ header {
 
     background-position: 80%;
 
+    z-index: 9999;
+
 }
 
 header a {
 
     text-decoration: none;
 
-    color: #fce138;
+    color: var(--primary-color);
 
 }
 
@@ -88,9 +100,9 @@ header nav ul li a {
 
 header nav ul li a:hover {
 
-    background: #fce138;
+    background: var(--primary-color);
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     border-radius: 15px;
 
@@ -104,7 +116,7 @@ header h1 {
 
     font-size: 36px;
 
-    color: #fce138;
+    color: var(--primary-color);
 
     margin: 0;
 
@@ -163,7 +175,7 @@ section {
 
     font-size: 55px;
 
-    color: #fce138;
+    color: var(--primary-color);
 
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
@@ -171,13 +183,13 @@ section {
 
 .hero-form {
 
-    border: 3px solid #024e76;
+    border: 3px solid var(--secondary-color);
 
     background-color: rgba(252, 225, 56, 0.8);
 
     padding: 20px;
 
-    color: #024076;
+    color: var(--secondary-color);
 
     width: 40%;
 
@@ -204,7 +216,7 @@ section {
 
 .form-input {
 
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
 
     display: block;
 
@@ -212,7 +224,7 @@ section {
 
     font-size: 16px;
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     width: 100%;
 
@@ -238,11 +250,115 @@ section {
 
 }
 
+.checkbox-wrapper input, .radio-wrapper input {
+
+    opacity: 0;
+
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+
+    position: relative;
+
+    left: 10px;
+
+    margin: 10px;
+
+    line-height: 1.6;
+
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+
+    content: "";
+
+    height: 20px;
+
+    width: 20px;
+
+    background: rgba(255, 255, 255, 0.75);
+
+    border: 1px solid var(--secondary-color);
+
+    position: absolute;
+
+    top: -4px;
+
+    left: -30px;
+
+}
+
+.radio-wrapper label::before {
+
+    border-radius: 50%;
+
+}
+
+.radio-wrapper label::after {
+
+    content: "";
+
+    width: 20px;
+
+    height: 20px;
+
+    border-radius: 50%;
+
+    background: var(--secondary-color);
+
+    position: absolute;
+
+    left: -29px; 
+
+    top: -3px;
+
+    background-image: radial-gradient(circle, #39a6b2, var(--secondary-color));
+
+}
+
+.checkbox-wrapper label::after {
+
+    content: "";
+
+    height: 6px;
+
+    width: 14px;
+
+    border-left: 2px solid var(--secondary-color);
+
+    border-bottom: 2px solid var(--secondary-color);
+
+    position: absolute;
+
+    left: -26px;
+
+    top: 1px;
+
+    transform: rotate(-58deg);
+
+}
+
+.checkbox-wrapper input + label::after,
+
+.radio-wrapper input + label::after {
+
+    content: none;
+
+}
+
+.checkbox-wrapper input:checked + label::after,
+
+.radio-wrapper input:checked + label::after {
+
+    content: "";
+
+}
+
 .hero-form button {
 
-    color: #fce138;
+    color: var(--primary-color);
 
-    background-color: #024e76;
+    background-color: var(--secondary-color);
 
     border: none;
 
@@ -256,7 +372,7 @@ section {
 
 .hero-form button:hover {
 
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 
 }
 
@@ -267,7 +383,7 @@ section {
 
     line-height: 1.7;
 
-    color: #39a6b2;
+    color: var(--tertiary-color);
 
     width: 80%;
 
@@ -283,7 +399,7 @@ section {
 
     font-size: 48px;
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     border-bottom: 3px solid;
 
@@ -299,13 +415,13 @@ section {
 
 .primary-border {
 
-    border-color: #fce138;
+    border-color: var(--primary-color);
 
 }
 
 .steps {
 
-    background: #fce138;
+    background: var(--primary-color);
 
 }
 
@@ -335,7 +451,7 @@ section {
 
 .step h3 {
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     font-size: 46px;
 
@@ -377,7 +493,7 @@ section {
 
 .step-text p {
 
-    color: #39a6b2;
+    color: var(--tertiary-color);
 
     font-size: 18px;
 
@@ -389,13 +505,13 @@ section {
 
     line-height: 1.5;
 
-    color: #024e76;
+    color: var(--secondary-color);
 
 }
 
 .secondary-border {
 
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 
 }
 
@@ -417,9 +533,9 @@ section {
 
     margin: 20px;
 
-    background: #024e76;
+    background: var(--secondary-color);
     
-    color: #fce138;
+    color: var(--primary-color);
 
     flex: 1
 
@@ -475,7 +591,7 @@ section {
 
 .contact {
 
-    background: #024e76;
+    background: var(--secondary-color);
 
 }
 
@@ -499,7 +615,7 @@ section {
 
 .contact h2 {
 
-    color: #fce138
+    color: var(--primary-color);
 
 }
 
@@ -517,7 +633,7 @@ section {
 
 .contact-info h3 {
 
-    color: #fce138;
+    color: var(--primary-color);
 
     font-size: 32px;
 
@@ -537,13 +653,13 @@ section {
 
 .contact-info a {
 
-    color: #fce138
+    color: var(--primary-color);
     
 }
 
 .contact-form input, .contact-form textarea {
 
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
 
     display: block;
 
@@ -551,7 +667,7 @@ section {
 
     font-size: 16px;
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     width: 100%;
 
@@ -579,9 +695,9 @@ section {
 
     border: none;
 
-    background: #fce138;
+    background: var(--primary-color);
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     text-align: center;
 
@@ -595,7 +711,7 @@ section {
 
 .contact-form button:hover {
 
-    color: #fce138;
+    color: var(--primary-color);
 
     background: #39a6b2;
 
@@ -609,7 +725,7 @@ section {
 
 footer {
 
-    background: #fce138;
+    background: var(--primary-color);
 
     width: 100%;
 
@@ -625,7 +741,7 @@ footer {
 
 footer h2 {
 
-    color: #024e76;
+    color: var(--secondary-color);
 
     font-size: 30px;
 
@@ -643,7 +759,7 @@ footer div {
 
 footer a {
 
-    color: #024e76;
+    color: var(--secondary-color);
 
 }
 
